# comfyui-dci

./: .gitignore  BINARY_FILE_SELECTOR_UPDATE.md  BINARY_LOADER_FIX_SUMMARY.md  CONNECTIVITY_FIX.md  DEB_PACKAGE_FIX.md  LICENSE  Makefile  PUBLISHING.md  README.md  REGISTRY_CHECKLIST.md  RESTRUCTURE_SUMMARY.md  __init__.py  commit_fix.txt  commit_fix_message.txt  commit_message.txt  commit_windows_fix.txt  dci-specification.md  dci_format.py  dci_reader.py  detailed-design.md  install.bat  install.sh  nodes.py  preliminary-design.md  pyproject.toml  requirements.txt  simple_quality_test.py  simple_test.py  test_advanced_compression.py  test_categories.py  test_new_dci_nodes.py  test_pure_python_simple.py  test_quality_feature.py
.cursor/rules/: project.mdc
.github/workflows/: publish.yml  publish_action.yml  test.yml
.kiro/steering/: project.md
examples/: README.md  decimal_scale_example.py  example_dci_new_workflow.json  example_dci_preview_workflow.json  example_workflow.json
locales/: en.json  zh-CN.json
py/: __init__.py  dci_format.py  dci_reader.py  nodes.py
py/nodes/: __init__.py  base_node.py  dci_file_saver_node.py  deb_loader_node.py  deb_packager_node.py  debug_node.py  directory_loader_node.py  drop_shadow_node.py  file_node.py  image_node.py  image_preview_node.py  preview_node.py  sample_image_node.py  structure_node.py
py/utils/: __init__.py  enums.py  file_utils.py  i18n.py  image_utils.py  ui_utils.py
resources/: README.md
tests/: README.md  conftest.py  run_tests.py  run_unit_tests.py  simple_binary_test.py  test_binary_loader_direct.py  test_binary_loader_simple.py  test_binary_nodes.py  test_border_color.py  test_comfyui_nodes.py  test_dci.py  test_dci_file_saver.py  test_dci_format.py  test_dci_preview.py  test_dci_preview_node_fix.py  test_dci_preview_simple.py  test_dci_preview_ui.py  test_font_size_fix.py  test_font_size_simple.py  test_layer_system.py  test_new_dci_nodes.py  test_node_connectivity.py  test_node_loading.py  test_node_registration.py  test_pure_python_ar.py  test_pure_python_implementation.py  test_pure_python_only.py  test_quality_feature.py  test_real_dci_files.py  test_runner.py  test_structure_node.py  test_transparent_preview.py  verify_dci_preview_fix.py  verify_tone_removal.py
tools/: README.md  commit_helper.py
web_version/: README.md
